<?xml version="1.0"?>
<package>
  <name>catkin_simple</name>
  <version>0.2.0</version>
  <description>catkin, simpler</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <license>BSD</license>

  <author email="william@osrfoundation.org">William Woodall</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>

</package>
